Add opens for lombok smoke test so that it runs with JDK16